--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -108,7 +108,7 @@ version:  # 主题版本相关
 # Header
 #---------------------------
 navbar:
-  blog_title: 落樱缤纷 # 导航栏左侧的标题，为空则按 hexo config.title 显示
+  blog_title: # 导航栏左侧的标题，为空则按 hexo config.title 显示
   ground_glass:  # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
     enable: false
     px: 3  # 模糊像素，只能为数字，数字越大模糊度越高
@@ -169,7 +169,7 @@ scroll_top_arrow:  # 向顶部滚动的箭头
 # Index Page
 #---------------------------
 index:
-  banner_img: /img/default.png  # 首页 Banner 头图，以下相同
+  banner_img: /img/default-banner.webp  # 首页 Banner 头图，以下相同
   banner_img_height: 100  # 头图高度，屏幕百分比，available: 0 - 100
   banner_mask_alpha: 0.3  # 头图黑色蒙版的透明度，available: 0 - 1.0， 0 是完全透明（无蒙版），1 是完全不透明
   post_default_img: '' # 默认的文章封面图，当没有指定 index_img 时会使用该图片，若都为空则不显示任何图片
@@ -200,7 +200,7 @@ page:
 #---------------------------
 post:  # 部分配置同时控制自定义页面，注意备注
   banner_img: /img/default.png
-  banner_img_height: 70  # available: 0 - 100
+  banner_img_height: 50  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   meta:  # 文章标题下方的信息
     author:  # 作者，优先根据 front-matter 里 author 字段，其次是 hexo 配置中 author 值
@@ -336,8 +336,8 @@ remark42:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/default.png
-  banner_img_height: 60  # available: 0 - 100
+  banner_img: /img/Fraxinus-banner.webp
+  banner_img_height: 70  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   subtitle:  # 打字机内容
 
@@ -346,8 +346,8 @@ archive:
 # Categories Page
 #---------------------------
 category:
-  banner_img: /img/default.png
-  banner_img_height: 60  # available: 0 - 100
+  banner_img: /img/Fraxinus-banner.webp
+  banner_img_height: 70  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   subtitle:  # 打字机内容
   post_limit: 10  # 单个分类中折叠展示文章数的最大值，超过限制会显示 More
@@ -359,8 +359,8 @@ category:
 # Tags Page
 #---------------------------
 tag:
-  banner_img: /img/default.png
-  banner_img_height: 80  # available: 0 - 100
+  banner_img: /img/Fraxinus-banner.webp
+  banner_img_height: 70  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   subtitle:  # 打字机内容
   tagcloud: # 标签云
@@ -370,13 +370,12 @@ tag:
     start_color: "#BBBBEE"
     end_color: "#337ab7"
 
-
 #---------------------------
 # 关于页
 # About Page
 #---------------------------
 about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.com/docs/guide/#%E5%85%B3%E4%BA%8E%E9%A1%B5
-  banner_img: /img/kuon-banner.jpg
+  banner_img: /img/kuon-banner.webp
   banner_img_height: 60  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   subtitle:  # 打字机内容
@@ -384,8 +383,8 @@ about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.co
   name: 落樱
   introduce: '灵者何为？' # 支持 HTML
   icons: # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，class 代表图标的 css class
-    - { class: 'iconfont icon-github-fill', link: 'https://github.com/SakuraNeko', tip: 'GitHub' }
     - { class: 'iconfont icon-mail', link: 'mailto:devneko@Outlook.com', tip: '邮件' }
+    - { class: 'iconfont icon-github-fill', link: 'https://github.com/SakuraNeko', tip: 'GitHub' }
     - { class: 'iconfont icon-zhihu-fill', link: 'https://www.zhihu.com/people/CatElf', tip: '知乎' }
     - { class: 'iconfont icon-wechat-fill', qrcode: '/img/wechat.png' }  # 添加 qrcode 后，点击不再跳转，而是悬浮二维码，需要指定 image
 
@@ -395,10 +394,10 @@ about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.co
 # 404 Page
 #---------------------------
 page404:
-  banner_img: /img/default.png
+  banner_img: /img/404-banner.webp
   banner_img_height: 85  # available: 0 - 100
-  banner_mask_alpha: 0.3  # available: 0 - 1.0
-  subtitle: 'Page not found'  # 打字机内容
+  banner_mask_alpha: 0.4  # available: 0 - 1.0
+  subtitle: '404'  # 打字机内容
 
 
 #---------------------------
@@ -406,7 +405,7 @@ page404:
 # Links Page
 #---------------------------
 links:
-  banner_img: /img/default.png
+  banner_img: /img/Momizi-banner.webp
   banner_img_height: 60  # available: 0 - 100
   banner_mask_alpha: 0.3  # available: 0 - 1.0
   subtitle:  # 打字机内容
