--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://SakuraNeko.github.io
+url: https://www.sakuraneko.org
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
