--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "sakuraneko.tech",
+  "version": "1.0.0",
+  "repository": "https://github.com/SakuraNeko/SakuraNeko.github.io.git",
+  "author": "SakuraNeko <devneko@outlook.com>",
   "private": true,
   "scripts": {
     "build": "hexo generate",
